Sample Implementation/Ingress/captureorder-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: captureorder
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "linkerd"
spec:
  backend:
    serviceName: captureorder
    servicePort: http
  rules:
  - host: captureorder
    http:
      paths:
      - backend:
          serviceName: captureorder
          servicePort: http
